crates/layout/tests/snapshots/corpus_pagination__corpus_academic_pagination.snap
---
source: crates/layout/tests/corpus_pagination.rs
assertion_line: 131
expression: summary
---
category: academic
fixtures:
  - name: blockquote
    summary:
      page_count: 1
      pages:
        - page_number: 1
          block_count: 4
          first_block_index: 0
          last_block_index: 3
  - name: heading-hierarchy
    summary:
      page_count: 1
      pages:
        - page_number: 1
          block_count: 11
          first_block_index: 0
          last_block_index: 10
  - name: mixed-emphasis
    summary:
      page_count: 1
      pages:
        - page_number: 1
          block_count: 3
          first_block_index: 0
          last_block_index: 2
  - name: numbered-list
    summary:
      page_count: 1
      pages:
        - page_number: 1
          block_count: 7
          first_block_index: 0
          last_block_index: 6
  - name: simple-paragraph
    summary:
      page_count: 1
      pages:
        - page_number: 1
          block_count: 1
          first_block_index: 0
          last_block_index: 0
