crates/layout/tests/snapshots/corpus_pagination__corpus_tracked_pagination.snap
---
source: crates/layout/tests/corpus_pagination.rs
assertion_line: 137
expression: summary
---
category: tracked
fixtures:
  - name: comments
    summary:
      page_count: 1
      pages:
        - page_number: 1
          block_count: 2
          first_block_index: 0
          last_block_index: 1
  - name: deletion
    summary:
      page_count: 1
      pages:
        - page_number: 1
          block_count: 2
          first_block_index: 0
          last_block_index: 1
  - name: insertion
    summary:
      page_count: 1
      pages:
        - page_number: 1
          block_count: 1
          first_block_index: 0
          last_block_index: 0
  - name: mixed-revisions
    summary:
      page_count: 1
      pages:
        - page_number: 1
          block_count: 1
          first_block_index: 0
          last_block_index: 0
